add docker, maven scripts