@@ -41,10 +41,39 @@
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.41.0</version>
-                <configuration>
+                 <configuration>
+                    <verbose>true</verbose>
                     <images>
                         <image>
-                            <name>mustangxu/spring-boot-admin-server:${project.version}-${git.commit.id.abbrev}</name>
+                            <name>mustangxu/spring-boot-admin-server</name>
+                            <build>
+                                <tags>
+                                    <tag>latest</tag>
+                                    <tag>%v-${git.commit.id.abbrev}</tag>
+                                </tags>
+                                <from>bellsoft/liberica-openjre-alpine-musl:17.0.6</from>
+                                <workdir>/app</workdir>
+                                <entryPoint>
+                                    <exec>
+                                        <arg>java</arg>
+                                        <arg>-Xmx1G</arg>
+                                        <arg>--enable-preview</arg>
+                                        <arg>-XX:+UnlockExperimentalVMOptions</arg>
+                                        <arg>-XX:+UseZGC</arg>
+                                        <arg>-jar</arg>
+                                        <arg>${project.artifactId}-${project.version}.jar</arg>
+                                    </exec>
+                                </entryPoint>
+                                <assemblies>
+                                    <assembly>
+                                        <descriptorRef>artifact</descriptorRef>
+                                        <targetDir>/app</targetDir>
+                                    </assembly>
+                                </assemblies>
+                                <ports>
+                                    <port>9000</port>
+                                </ports>
+                            </build>
                         </image>
                     </images>
                 </configuration>
